test/sema/typeck/function/never-not-bottom.out
error: `return` expects value of type `Int32` but got `Never`.
--> never-not-bottom.dora:1:15 - 3:2
1 error found.
