test/sema/typeck/function/never-not-bottom.dora
fn f(): Int32 {
    std::abort()
}
